<resources>
    <string name="resouces_language">en</string>
    <string name="resouces_country">UK</string>
    <string name="app_name">Vector</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_public_rooms">Public Rooms</string>
    <string name="title_activity_room_info">Room info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_invite_user">Invite Users</string>
    <string name="title_activity_medias_picker">Select Medias</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Redact</string>
    <string name="share">Share</string>
    <string name="paste_username">Paste username</string>
    <string name="delete_message">Delete message</string>
    <string name="view_profile">View profile</string>
    <string name="direct_message">Direct message</string>
    <string name="forward">Forward</string>
    <string name="message_details">Message details</string>
    <string name="view">View</string>
    <string name="set_power_level">Power level</string>
    <string name="chat">Chat</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="more">More</string>
    <string name="chat_with">Chat with </string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_members">Members list</string>
    <string name="action_public_rooms">Public Rooms</string>
    <string name="action_my_rooms">My Rooms</string>
    <string name="action_add_account">Add Account</string>
    <string name="action_remove_account">Remove Account</string>
    <string name="action_leave">Leave Room</string>
    <string name="action_delete">Delete Room</string>
    <string name="action_invite">Invite</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_logout">Logout</string>
    <string name="action_enable_room_notification">Enable room notifications</string>
    <string name="action_disable_room_notification">Disable room notifications</string>
    <string name="send_bug_report">Send Bug Report</string>
    <string name="action_create_room">Create...</string>
    <string name="action_room_info">Room info</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_search_room">Search room</string>
    <string name="action_search_contact">Search contact</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="action_invite_by_name">Invite from identifier</string>
    <string name="action_invite_by_list">Invite from other rooms</string>
    <string name="action_home">Home</string>
    <string name="action_drawer">Extras</string>
    <string name="action_resume_call">Resume call</string>
    <string name="about">About</string>
    <string name="send_files_in">Send into</string>
    <string name="save_files_in">Save into</string>
    <string name="file_is_saved">%1$s is saved.</string>
    <string name="read_receipt">Read</string>
    <string name="downloads">Downloads</string>
    <string name="gallery">Gallery</string>
    <string name="sd_scard">SD card</string>
    <string name="other">Other</string>
    <string name="my_rooms">My rooms</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="create">Create:</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="matrix_login">Matrix Login</string>
    <string name="login">Log in</string>
    <string name="create_account">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hs_url">Home Server URL</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="advanced_server_options">Advanced server options</string>
    <string name="create_room_set_alias">Set room alias</string>
    <string name="create_room_alias_hint">room-alias</string>
    <string name="create_room_set_name">Set room name</string>
    <string name="create_room_name_hint">My room</string>
    <string name="join_room_title">Join Room</string>
    <string name="join_room_hint">(e.g. #foo:example.org)</string>
    <string name="membership_invite">Invited</string>
    <string name="membership_join">Joined</string>
    <string name="membership_leave">Left</string>
    <string name="membership_kick">Kicked</string>
    <string name="membership_ban">Banned</string>
    <plurals name="num_members">
        <item quantity="one">%1$s user</item>
        <item quantity="other">%1$s users</item>
    </plurals>
    <string name="invite">Invite</string>
    <string name="kick">Kick</string>
    <string name="ban">Ban</string>
    <string name="unban">Un-ban</string>
    <string name="message_changes_successful">Changes successfully made</string>
    <string name="message_unsaved_changes">There are unsaved changes. Leaving will discard them.</string>
    <string name="option_send_files">Send files</string>
    <string name="option_take_photo">Take photo</string>
    <string name="option_attach_video">Attach video</string>
    <string name="login_error_already_logged_in">Already logged in</string>
    <string name="login_error_must_start_http">URL must start with http[s]://</string>
    <string name="login_error_network_error">Unable to login: Network error</string>
    <string name="login_error_unable_login">Unable to login</string>
    <string name="login_error_invalid_credentials">Enter valid credentials</string>
    <string name="login_error_invalid_home_server">Enter valid URL</string>
    <string name="members_list">Members List</string>
    <string name="read_receipts_list">Read Receipts List</string>
    <string name="choose_account">Choose account</string>
    <string name="compression_options">What size should this be sent as?</string>
    <string name="compression_opt_list_original">Original</string>
    <string name="compression_opt_list_large">Large</string>
    <string name="compression_opt_list_medium">Medium</string>
    <string name="compression_opt_list_small">Small</string>
    <string name="members_one_to_one">One to one room members</string>
    <string name="members_small_room_members">Small room members</string>
    <string name="members_large_room_members">Large room members</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="room_creation_room_name">Name</string>
    <string name="room_creation_room_name_hint">(e.g lunchGroup)</string>
    <string name="room_creation_room_alias">Alias</string>
    <string name="room_creation_room_alias_hint">"Room Alias (optional)</string>
    <string name="room_creation_participants">With</string>
    <string name="room_creation_participants_hint">(e.g. @me:hs;...)</string>
    <string name="room_creation_create_room">Create room</string>
    <string name="room_creation_public">Public Room</string>
    <string name="room_creation_private">Private</string>
    <string name="room_info_room_name">Room name</string>
    <string name="room_info_room_name_hint">Enter a room name</string>
    <string name="room_info_room_topic">Room topic</string>
    <string name="room_info_room_topic_hint">Enter a room topic</string>
    <string name="room_info_room_canonical_alias">Canonical alias</string>
    <string name="room_info_room_canonical_hint">Enter a canonical alias</string>
    <string name="room_info_room_discard_changes">Discard changes ?</string>
    <string name="room_info_room_discard">Discard</string>
    <string name="contacts">Contacts</string>
    <string name="invite_this_user_to_use_matrix">Invite this user to use matrix with</string>
    <string name="invitation_message">I\'d like to chat with you with Vector. Please, visit the website http://vector.im to have more information.</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notification_settings_disable_all">Disable all notifications</string>
    <string name="notification_settings_enable_notifications">Enable notifications</string>
    <string name="notification_settings_enable_notifications_warning">All notifications are currently disabled for all devices.</string>
    <string name="notification_settings_global_notification_settings">Global Notification Settings</string>
    <string name="notification_settings_global_info">Notification settings are saved to your user account and are shared between all clients which support them (including desktop notifications).\n\nRules are applied in order; the first rule which matches defines the outcome for the message.\nSo: Per-word notifications are more important than per-room notifications which are more important than per-sender notifications.\nFor multiple rules of the same kind, the first one in the list that matches takes priority.</string>
    <string name="notification_settings_per_word_notifications">Per-word notifications</string>
    <string name="notification_settings_always_notify">Always notify</string>
    <string name="notification_settings_word_to_match">word to match</string>
    <string name="notification_settings_sound">Sound</string>
    <string name="notification_settings_highlight">Highlight</string>
    <string name="notification_settings_add">Add</string>
    <string name="logo">Logo</string>
    <string name="room_menu_search">Search</string>
    <string name="room_menu_participants">Participants</string>
    <string name="room_menu_favourite">Favourite</string>
    <string name="room_menu_settings">Settings</string>
    <string name="ssl_fingerprint_hash">Fingerprint (%s):</string>
    <string name="ssl_cert_not_trust">This could mean that someone is maliciously intercepting your traffic, or that your phone does not trust the certificate provided by the remote server.</string>
    <string name="ssl_cert_new_account_expl">If the server administrator has said that this is expected, ensure that the fingerprint below matches the fingerprint provided by them.</string>
    <string name="ssl_only_accept">ONLY accept the certificate if the server administrator has published a fingerprint that matches the one above.</string>
    <string name="ssl_fingerprint_example">00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00</string>
    <string name="room_details_mute_notifs">Mute notifications</string>
    <string name="room_details_room_name">Room Name</string>
    <string name="room_details_topic">Topic</string>
    <string name="room_details_room_is_public">This room is public</string>
    <string name="room_details_room_is_private">This room is private</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_old_password">old password</string>
    <string name="settings_new_password">new password</string>
    <string name="settings_confirm_password">confirm password</string>
</resources>