<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.matrix.vector.activity.RoomActivity" >

    <item android:id="@+id/ic_action_video_call"
        android:title="@string/action_video_call"
        android:icon="@drawable/video"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/ic_action_enable_notification"
        android:title="@string/action_enable_room_notification"
        android:icon="@drawable/ic_material_settings_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_disable_notification"
        android:title="@string/action_disable_room_notification"
        android:icon="@drawable/ic_material_settings_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_room_info"
        android:title="@string/action_room_info"
        android:icon="@drawable/ic_material_description"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_members"
        android:title="@string/action_members"
        android:icon="@drawable/ic_material_group_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_invite_by_name"
        android:title="@string/action_invite_by_name"
        android:icon="@drawable/ic_material_person_add_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_invite_by_list"
        android:title="@string/action_invite_by_list"
        android:icon="@drawable/ic_material_group_add_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_leave"
        android:title="@string/action_leave"
        android:icon="@drawable/ic_material_exit_to_app_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_material_settings_small"
        app:showAsAction="never" />

    <item android:id="@+id/ic_send_bug_report"
        android:title="@string/send_bug_report"
        android:icon="@drawable/ic_material_bug_report_small"
        app:showAsAction="never" />
</menu>
