<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_action_view_profile"
        android:icon="@drawable/ic_material_identity"
        android:title="@string/view_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_direct_message"
        android:icon="@drawable/ic_material_message"
        android:title="@string/direct_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_paste_user_name"
        android:icon="@drawable/ic_material_paste"
        android:title="@string/paste_username"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_delete_message"
        android:icon="@drawable/ic_material_delete"
        android:title="@string/redact"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_share"
        android:icon="@drawable/ic_material_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_forward"
        android:icon="@drawable/ic_material_forward"
        android:title="@string/forward"
        app:showAsAction="always" />

    <item
        android:id="@+id/ic_action_save"
        android:icon="@drawable/ic_material_save"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>