<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/login_input_layout"/>

    <RelativeLayout
        android:id="@id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_register_account"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email_address"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_below="@id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/login_matrix_server_url"
            android:layout_below="@id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hs_url"
            android:text="https://matrix.org"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_below="@id/login_matrix_server_url"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="77dp" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_alignBaseline="@id/button_login"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

    <!-- flow mask view: to be displayed above the entire screen -->
    <RelativeLayout
        android:id="@+id/flow_ui_mask_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <View
            android:id="@+id/search_mask_view"
            android:background="#AAAAAAAA"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

        <ProgressBar
            android:id="@+id/search_progress"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="true" />

    </RelativeLayout>

</RelativeLayout>

