<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- this section has no title in purpose -->
    <im.vector.preference.RoomAvatarPreference
        android:key="roomPhotoAvatar"
        android:title="@string/room_settings_room_photo"/>

    <EditTextPreference
        android:key="roomNameEditText"
        android:focusable="true"
        android:title="@string/room_details_room_name" />

    <EditTextPreference
        android:key="roomTopicEditText"
        android:focusable="true"
        android:title="@string/room_details_topic"/>

    <!-- hide a divider here but did not find how to do it -->

    <!-- for further use
    <Preference
        android:key="roomPrivacyInfo"
        android:title="@string/settings_room_privacy_label" />
    -->

    <!-- hide until there is an API to move public <-> private -->
    <!--SwitchPreference
        android:key="roomPrivacySwitch"
        android:title="@string/settings_privacy_policy"
        android:summaryOn="@string/room_details_room_is_public"
        android:summaryOff="@string/room_details_room_is_private"/-->

    <!-- mute/un mute room notifications-->
    <SwitchPreference
        android:key="muteNotificationsSwitch"
        android:title="@string/room_details_mute_notifs" />

</PreferenceScreen>